--- a/index.html
+++ b/index.html
@@ -3,22 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>My Modern Website</title>
+    
+    <!-- CSS Code -->
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            max-width: 600px;
+            margin: 50px auto;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            color: #007BFF;
+        }
+        p {
+            font-size: 18px;
+            color: #555;
+        }
+        button {
+            padding: 10px 20px;
+            font-size: 18px;
+            background-color: #28a745;
+            color: white;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: 0.3s;
+        }
+        button:hover {
+            background-color: #218838;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
-    <p>This is a simple HTML & CSS website hosted on GitHub Pages.</p>
-
-    <h2>About Me</h2>
-    <p>Hello! This is a free website created using HTML, CSS, and JavaScript.</p>
-
-    <h2>Contact Me</h2>
-    <input type="text" placeholder="Your Name">
-    <input type="email" placeholder="Your Email">
-    <textarea placeholder="Your Message"></textarea>
-    <button onclick="sendMessage()">Send</button>
-
-    <script src="script.js"></script>
+    <div class="container">
+        <h1>Welcome to My Website</h1>
+        <p>Click the button below to see some magic!</p>
+        <button onclick="showMessage()">Click Me</button>
+    </div>
+    
+    <!-- JavaScript Code -->
+    <script>
+        function showMessage() {
+            alert("Hello! This is a JavaScript-powered message.");
+        }
+    </script>
 </body>
 </html>
