--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to My Website</h1>
+        <h1>Artwork Lord</h1>
         <p>Click the button below to see some magic!</p>
         <button onclick="showMessage()">Click Me</button>
     </div>
@@ -54,7 +54,7 @@
     <!-- JavaScript Code -->
     <script>
         function showMessage() {
-            alert("Hello! This is a JavaScript-powered message.");
+            alert("Hello! mere pasey kab degi.");
         }
     </script>
 </body>
