--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Artwork Lord</h1>
+        <h1>Priya Ki Mann Ki Baat</h1>
         <p>Click the button below to see some magic!</p>
         <button onclick="showMessage()">Click Me</button>
     </div>
@@ -54,7 +54,7 @@
     <!-- JavaScript Code -->
     <script>
         function showMessage() {
-            alert("Hello! mere pasey kab degi.");
+            alert("Hello! Papa Mere 5000 Kab Dega?.");
         }
     </script>
 </body>
