--- a/index.html
+++ b/index.html
@@ -3,31 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Modern Website</title>
+    <title>Interactive Website</title>
     
     <!-- CSS Code -->
     <style>
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
             background-color: #f4f4f4;
             margin: 0;
             padding: 0;
         }
+        .navbar {
+            background: #007BFF;
+            padding: 15px;
+            text-align: center;
+            color: white;
+            font-size: 20px;
+            font-weight: bold;
+        }
         .container {
-            max-width: 600px;
-            margin: 50px auto;
+            max-width: 800px;
+            margin: 30px auto;
             background: white;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
         }
-        h1 {
-            color: #007BFF;
+        .panel {
+            background: #e3e3e3;
+            padding: 15px;
+            margin-top: 20px;
+            border-radius: 5px;
+            transition: 0.3s;
         }
-        p {
-            font-size: 18px;
-            color: #555;
+        .panel:hover {
+            background: #d1d1d1;
         }
         button {
             padding: 10px 20px;
@@ -45,16 +56,25 @@
     </style>
 </head>
 <body>
+    <div class="navbar">My Interactive Website</div>
     <div class="container">
-        <h1>Priya Ki Mann Ki Baat</h1>
-        <p>Click the button below to see some magic!</p>
-        <button onclick="showMessage()">Click Me</button>
+        <h1>Welcome!</h1>
+        <p>Click the button below to see a hidden panel.</p>
+        <button onclick="togglePanel()">Show Panel</button>
+        <div class="panel" id="hiddenPanel" style="display: none;">
+            <p>This is a hidden panel that appears when you click the button!</p>
+        </div>
     </div>
     
     <!-- JavaScript Code -->
     <script>
-        function showMessage() {
-            alert("Hello! Papa Mere 5000 Kab Dega?.");
+        function togglePanel() {
+            var panel = document.getElementById("hiddenPanel");
+            if (panel.style.display === "none") {
+                panel.style.display = "block";
+            } else {
+                panel.style.display = "none";
+            }
         }
     </script>
 </body>
