--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Website</title>
+    <title>Design Store</title>
     
     <!-- CSS Code -->
     <style>
@@ -18,11 +18,11 @@
             padding: 15px;
             text-align: center;
             color: white;
-            font-size: 20px;
+            font-size: 24px;
             font-weight: bold;
         }
         .container {
-            max-width: 800px;
+            max-width: 1000px;
             margin: 30px auto;
             background: white;
             padding: 20px;
@@ -30,17 +30,27 @@
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
             text-align: center;
         }
-        .panel {
-            background: #e3e3e3;
-            padding: 15px;
+        .products {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
             margin-top: 20px;
-            border-radius: 5px;
-            transition: 0.3s;
         }
-        .panel:hover {
-            background: #d1d1d1;
+        .product {
+            background: #fff;
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+            text-align: center;
         }
-        button {
+        .product img {
+            width: 100%;
+            border-radius: 10px;
+        }
+        .product h3 {
+            margin: 10px 0;
+        }
+        .buy-btn {
             padding: 10px 20px;
             font-size: 18px;
             background-color: #28a745;
@@ -50,32 +60,36 @@
             border-radius: 5px;
             transition: 0.3s;
         }
-        button:hover {
+        .buy-btn:hover {
             background-color: #218838;
         }
     </style>
 </head>
 <body>
-    <div class="navbar">My Interactive Website</div>
+    <div class="navbar">My Design Store</div>
     <div class="container">
-        <h1>Welcome!</h1>
-        <p>Click the button below to see a hidden panel.</p>
-        <button onclick="togglePanel()">Show Panel</button>
-        <div class="panel" id="hiddenPanel" style="display: none;">
-            <p>This is a hidden panel that appears when you click the button!</p>
+        <h1>Buy Amazing Designs</h1>
+        <p>Explore our exclusive collection of creative designs.</p>
+        <div class="products">
+            <div class="product">
+                <img src="YOUR_IMAGE_URL_1" alt="Design 1">
+                <h3>Creative Poster</h3>
+                <p>$10.00</p>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+            <div class="product">
+                <img src="YOUR_IMAGE_URL_2" alt="Design 2">
+                <h3>Modern Business Card</h3>
+                <p>$5.00</p>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+            <div class="product">
+                <img src="YOUR_IMAGE_URL_3" alt="Design 3">
+                <h3>Minimalist Logo</h3>
+                <p>$15.00</p>
+                <button class="buy-btn">Buy Now</button>
+            </div>
         </div>
     </div>
-    
-    <!-- JavaScript Code -->
-    <script>
-        function togglePanel() {
-            var panel = document.getElementById("hiddenPanel");
-            if (panel.style.display === "none") {
-                panel.style.display = "block";
-            } else {
-                panel.style.display = "none";
-            }
-        }
-    </script>
 </body>
 </html>
