--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <p>Explore our exclusive collection of creative designs.</p>
         <div class="products">
             <div class="product">
-                <img src="YOUR_IMAGE_URL_1" alt="Design 1">
+                <img src="https://github.com/Natalord/Artworklord.com/commit/fe4dd8dd557a641cbcc901919454b12e9a707ed0" alt="Design 1">
                 <h3>Creative Poster</h3>
                 <p>$10.00</p>
                 <button class="buy-btn">Buy Now</button>
