--- a/index.html
+++ b/index.html
@@ -66,30 +66,26 @@
     </style>
 </head>
 <body>
-    <div class="navbar">My Design Store</div>
-    <div class="container">
-        <h1>Buy Amazing Designs</h1>
-        <p>Explore our exclusive collection of creative designs.</p>
-        <div class="products">
-            <div class="product">
-                <img src="https://github.com/Natalord/Artworklord.com/commit/fe4dd8dd557a641cbcc901919454b12e9a707ed0" alt="Design 1">
-                <h3>Creative Poster</h3>
-                <p>$10.00</p>
-                <button class="buy-btn">Buy Now</button>
-            </div>
-            <div class="product">
-                <img src="YOUR_IMAGE_URL_2" alt="Design 2">
-                <h3>Modern Business Card</h3>
-                <p>$5.00</p>
-                <button class="buy-btn">Buy Now</button>
-            </div>
-            <div class="product">
-                <img src="YOUR_IMAGE_URL_3" alt="Design 3">
-                <h3>Minimalist Logo</h3>
-                <p>$15.00</p>
-                <button class="buy-btn">Buy Now</button>
-            </div>
-        </div>
+  <div class="products">
+    <div class="product">
+        <img src="1.png" alt="Design 1">
+        <h3>Creative Poster</h3>
+        <p>$10.00</p>
+        <button class="buy-btn">Buy Now</button>
+    </div>
+    <div class="product">
+        <img src="F.png" alt="Design 2">
+        <h3>Modern Business Card</h3>
+        <p>$5.00</p>
+        <button class="buy-btn">Buy Now</button>
+    </div>
+    <div class="product">
+        <img src="Untitled-1.png" alt="Design 3">
+        <h3>Minimalist Logo</h3>
+        <p>$15.00</p>
+        <button class="buy-btn">Buy Now</button>
+    </div>
+</div>
     </div>
 </body>
 </html>
