--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <!-- CSS Code -->
     <style>
         body {
-            font-family: 'GoodDog', cursive;
-            background: url('https://www.toptal.com/designers/subtlepatterns/uploads/dark_embroidery.png');
-            margin: 0;
-            padding: 0;
-        }
+    font-family: 'GoodDog', cursive;
+    background: url('https://raw.githubusercontent.com/Natalord/Artworklord.com/main/black-hole-18565.gif') no-repeat center center fixed;
+    background-size: cover;
+    margin: 0;
+    padding: 0;
+}
         .navbar {
             background: #1a1a1a;
             padding: 15px;
@@ -23,14 +24,14 @@
             font-size: 28px;
             font-weight: bold;
             letter-spacing: 1px;
-            background: linear-gradient(45deg, #ff7b00, #ff4b1f, #ff1f1f, #ff8800);
+            background: linear-gradient(45deg, #ff4b1f, #1f3c88, #5a189a, #ffb703);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
         .container {
             max-width: 1000px;
             margin: 40px auto;
-            background: #222;
+            background: rgba(34, 34, 34, 0.9);
             padding: 25px;
             border-radius: 12px;
             box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.5);
@@ -61,14 +62,14 @@
             margin: 15px 0 10px;
             font-size: 22px;
             font-weight: 700;
-            background: linear-gradient(45deg, #ff7b00, #ff4b1f, #ff1f1f, #ff8800);
+            background: linear-gradient(45deg, #ff4b1f, #1f3c88, #5a189a, #ffb703);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
         .buy-btn {
             padding: 12px 25px;
             font-size: 18px;
-            background-color: #ff7b00;
+            background-color: #ff4b1f;
             color: white;
             border: none;
             cursor: pointer;
@@ -77,7 +78,7 @@
             font-weight: 400;
         }
         .buy-btn:hover {
-            background-color: #d14e0f;
+            background-color: #d12e0f;
         }
     </style>
 </head>
