--- a/index.html
+++ b/index.html
@@ -11,44 +11,45 @@
     <!-- CSS Code -->
     <style>
         body {
-    font-family: 'GoodDog', cursive;
-    background: url('https://raw.githubusercontent.com/Natalord/Artworklord.com/main/black-hole-18565.gif') no-repeat center center fixed;
-    background-size: cover;
-    margin: 0;
-    padding: 0;
-}
+            font-family: 'GoodDog', cursive;
+            background: url('black-hole-18565.gif') no-repeat center center fixed;
+            background-size: cover;
+            margin: 0;
+            padding: 0;
+        }
         .navbar {
-            background: #1a1a1a;
-            padding: 15px;
             text-align: center;
             font-size: 28px;
             font-weight: bold;
-            letter-spacing: 1px;
+            padding: 20px;
             background: linear-gradient(45deg, #ff4b1f, #1f3c88, #5a189a, #ffb703);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
+        .logo {
+            display: block;
+            margin: 0 auto 20px;
+            width: 150px;
+        }
         .container {
-            max-width: 1000px;
+            max-width: 1200px;
             margin: 40px auto;
-            background: rgba(34, 34, 34, 0.9);
-            padding: 25px;
-            border-radius: 12px;
-            box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.5);
+            padding: 20px;
             text-align: center;
             color: white;
         }
         .products {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-            margin-top: 20px;
+            column-count: 3;
+            column-gap: 15px;
         }
         .product {
-            background: #333;
-            padding: 20px;
-            border-radius: 12px;
-            box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
+            display: inline-block;
+            width: 100%;
+            background: rgba(255, 255, 255, 0.1);
+            padding: 15px;
+            margin-bottom: 15px;
+            border-radius: 10px;
+            break-inside: avoid;
             transition: transform 0.3s ease-in-out;
         }
         .product:hover {
@@ -56,34 +57,43 @@
         }
         .product img {
             width: 100%;
-            border-radius: 10px;
+            border-radius: 8px;
         }
         .product h3 {
-            margin: 15px 0 10px;
-            font-size: 22px;
-            font-weight: 700;
+            font-size: 20px;
+            margin-top: 10px;
             background: linear-gradient(45deg, #ff4b1f, #1f3c88, #5a189a, #ffb703);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
         .buy-btn {
-            padding: 12px 25px;
-            font-size: 18px;
+            padding: 10px 20px;
+            font-size: 16px;
             background-color: #ff4b1f;
             color: white;
             border: none;
             cursor: pointer;
-            border-radius: 6px;
+            border-radius: 5px;
             transition: 0.3s;
-            font-weight: 400;
         }
         .buy-btn:hover {
             background-color: #d12e0f;
+        }
+        @media (max-width: 768px) {
+            .products {
+                column-count: 2;
+            }
+        }
+        @media (max-width: 480px) {
+            .products {
+                column-count: 1;
+            }
         }
     </style>
 </head>
 <body>
     <div class="navbar">My Design Store</div>
+    <img src="https://raw.githubusercontent.com/Natalord/Artworklord.com/main/logo.png" alt="Logo" class="logo">
     <div class="container">
         <h1>Buy Amazing Designs</h1>
         <p>Explore our exclusive collection of creative designs.</p>
