--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Design Store</title>
+    <title>Design Store - Galaxy Theme</title>
     
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=GoodDog&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
     
     <!-- CSS Code -->
     <style>
         body {
-            font-family: 'GoodDog', cursive;
-            background: url('black-hole-18565.gif') no-repeat center center fixed;
+            font-family: 'Orbitron', sans-serif;
+            background: url('https://source.unsplash.com/1600x900/?galaxy,stars') no-repeat center center fixed;
             background-size: cover;
             margin: 0;
             padding: 0;
+            color: white;
+            overflow-x: hidden;
         }
         .navbar {
             text-align: center;
@@ -30,26 +32,26 @@
             display: block;
             margin: 0 auto 20px;
             width: 150px;
+            filter: drop-shadow(0 0 10px white);
         }
         .container {
             max-width: 1200px;
             margin: 40px auto;
             padding: 20px;
             text-align: center;
-            color: white;
         }
         .products {
-            column-count: 3;
-            column-gap: 15px;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+            padding: 20px;
         }
         .product {
-            display: inline-block;
-            width: 100%;
             background: rgba(255, 255, 255, 0.1);
-            padding: 15px;
-            margin-bottom: 15px;
+            padding: 20px;
             border-radius: 10px;
-            break-inside: avoid;
+            text-align: center;
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
             transition: transform 0.3s ease-in-out;
         }
         .product:hover {
@@ -60,7 +62,7 @@
             border-radius: 8px;
         }
         .product h3 {
-            font-size: 20px;
+            font-size: 22px;
             margin-top: 10px;
             background: linear-gradient(45deg, #ff4b1f, #1f3c88, #5a189a, #ffb703);
             -webkit-background-clip: text;
@@ -69,25 +71,16 @@
         .buy-btn {
             padding: 10px 20px;
             font-size: 16px;
-            background-color: #ff4b1f;
+            background: linear-gradient(45deg, #ff4b1f, #1f3c88);
             color: white;
             border: none;
             cursor: pointer;
             border-radius: 5px;
             transition: 0.3s;
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
         }
         .buy-btn:hover {
-            background-color: #d12e0f;
-        }
-        @media (max-width: 768px) {
-            .products {
-                column-count: 2;
-            }
-        }
-        @media (max-width: 480px) {
-            .products {
-                column-count: 1;
-            }
+            background: linear-gradient(45deg, #ffb703, #5a189a);
         }
     </style>
 </head>
@@ -95,24 +88,24 @@
     <div class="navbar">My Design Store</div>
     <img src="https://raw.githubusercontent.com/Natalord/Artworklord.com/main/logo.png" alt="Logo" class="logo">
     <div class="container">
-        <h1>Buy Amazing Designs</h1>
-        <p>Explore our exclusive collection of creative designs.</p>
+        <h1>Explore the Universe of Designs</h1>
+        <p>Find interstellar creativity and cosmic inspiration.</p>
         <div class="products">
             <div class="product">
                 <img src="https://raw.githubusercontent.com/Natalord/Artworklord.com/main/1.png" alt="Design 1">
-                <h3>Creative Poster</h3>
+                <h3>Galactic Poster</h3>
                 <p>$10.00</p>
                 <button class="buy-btn">Buy Now</button>
             </div>
             <div class="product">
                 <img src="https://raw.githubusercontent.com/Natalord/Artworklord.com/main/F.png" alt="Design 2">
-                <h3>Modern Business Card</h3>
+                <h3>Futuristic Business Card</h3>
                 <p>$5.00</p>
                 <button class="buy-btn">Buy Now</button>
             </div>
             <div class="product">
                 <img src="https://raw.githubusercontent.com/Natalord/Artworklord.com/main/Untitled-1.png" alt="Design 3">
-                <h3>Minimalist Logo</h3>
+                <h3>Cosmic Logo</h3>
                 <p>$15.00</p>
                 <button class="buy-btn">Buy Now</button>
             </div>
