--- a/index.html
+++ b/index.html
@@ -3,47 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Design Store - Galaxy Theme</title>
-    
-    <!-- Google Fonts -->
+    <title>Galaxy Art Store</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Stage+Wander&display=swap" rel="stylesheet">
-    
-    <!-- CSS Code -->
     <style>
         body {
-            font-family: 'Stage Wander', sans-serif;
-            background: url('https://source.unsplash.com/1600x900/?galaxy,stars,nebula') no-repeat center center fixed;
+            font-family: 'Orbitron', sans-serif;
+            background: url('https://source.unsplash.com/1600x900/?galaxy,stars,space') no-repeat center center fixed;
             background-size: cover;
+            color: white;
             margin: 0;
             padding: 0;
-            color: white;
-            overflow-x: hidden;
-            animation: fadeIn 2s ease-in-out;
-        }
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
         }
         .navbar {
             text-align: center;
-            font-size: 40px;
-            font-weight: bold;
+            font-size: 30px;
             padding: 20px;
-            background: linear-gradient(45deg, #00f260, #0575e6);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            animation: glow 1.5s infinite alternate;
-        }
-        @keyframes glow {
-            from { text-shadow: 0 0 10px white; }
-            to { text-shadow: 0 0 30px white; }
-        }
-        .logo {
-            display: block;
-            margin: 0 auto 20px;
-            width: 200px;
-            filter: drop-shadow(0 0 15px white);
+            background: rgba(0, 0, 0, 0.7);
+            box-shadow: 0 4px 10px rgba(255, 255, 255, 0.3);
         }
         .container {
             max-width: 1200px;
@@ -63,16 +39,6 @@
             border-radius: 10px;
             text-align: center;
             box-shadow: 0 0 15px rgba(255, 255, 255, 0.7);
-            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-            animation: fadeInUp 1.5s ease-in-out;
-        }
-        @keyframes fadeInUp {
-            from { opacity: 0; transform: translateY(20px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-        .product:hover {
-            transform: scale(1.1);
-            box-shadow: 0 0 30px rgba(255, 255, 255, 0.9);
         }
         .product img {
             width: 100%;
@@ -80,34 +46,26 @@
         }
         .product h3 {
             font-size: 24px;
-            margin-top: 10px;
-            background: linear-gradient(45deg, #ff4b1f, #1f3c88, #5a189a, #ffb703);
+            background: linear-gradient(45deg, #ff4b1f, #1f3c88);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
         .buy-btn {
-            padding: 12px 25px;
+            padding: 10px 20px;
             font-size: 18px;
             background: linear-gradient(45deg, #ff4b1f, #1f3c88);
             color: white;
             border: none;
             cursor: pointer;
             border-radius: 5px;
-            transition: 0.3s;
-            box-shadow: 0 0 12px rgba(255, 255, 255, 0.6);
-        }
-        .buy-btn:hover {
-            background: linear-gradient(45deg, #ffb703, #5a189a);
-            transform: scale(1.1);
         }
     </style>
 </head>
 <body>
-    <div class="navbar">Mystical Design Store</div>
-    <img src="https://raw.githubusercontent.com/Natalord/Artworklord.com/main/logo.png" alt="Logo" class="logo">
+    <div class="navbar">Galaxy Art Store</div>
     <div class="container">
-        <h1>Unravel Mysteries of Your Future</h1>
-        <p>Explore cosmic designs that transcend imagination.</p>
+        <h1>Explore the Universe of Designs</h1>
+        <p>Unique cosmic-themed artwork just for you.</p>
         <div class="products">
             <div class="product">
                 <img src="https://source.unsplash.com/300x300/?galaxy,stars" alt="Design 1">
@@ -117,14 +75,8 @@
             </div>
             <div class="product">
                 <img src="https://source.unsplash.com/300x300/?nebula,space" alt="Design 2">
-                <h3>Futuristic Business Card</h3>
+                <h3>Futuristic Card</h3>
                 <p>$5.00</p>
-                <button class="buy-btn">Buy Now</button>
-            </div>
-            <div class="product">
-                <img src="https://source.unsplash.com/300x300/?blackhole,universe" alt="Design 3">
-                <h3>Cosmic Logo</h3>
-                <p>$15.00</p>
                 <button class="buy-btn">Buy Now</button>
             </div>
         </div>
