--- a/index.html
+++ b/index.html
@@ -1,70 +1,138 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galaxy Art Store</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Meri Galaxy Website</title>
+    <!-- Google Font Exo 2 import kar rahe hain -->
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@700&display=swap" rel="stylesheet">
     <style>
-        @font-face {
-            font-family: 'Stage Wander';
-            src: url('StageWander.ttf') format('truetype');
-        }
-
         body {
-            background: #0a0a1a;
-            color: white;
-            font-family: 'Stage Wander', sans-serif;
-            text-align: center;
             margin: 0;
             padding: 0;
+            font-family: 'Exo 2', sans-serif;
+            color: #ffffff;
+            /* Galaxy background with stars */
+            background: radial-gradient(circle at center, #0a0a23 0%, #000000 70%);
+            overflow-x: hidden;
+            position: relative;
         }
 
-        .header {
-            background: #222;
-            padding: 20px;
-            font-size: 3em;
-            font-weight: bold;
+        /* Stars effect ke liye pseudo-elements */
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 800 600"><circle cx="50" cy="50" r="1" fill="white"/><circle cx="150" cy="200" r="2" fill="white"/><circle cx="300" cy="100" r="1" fill="white"/><circle cx="500" cy="400" r="2" fill="white"/><circle cx="700" cy="300" r="1" fill="white"/><circle cx="200" cy="500" r="1" fill="white"/><circle cx="600" cy="150" r="2" fill="white"/></svg>') repeat;
+            opacity: 0.5;
+            z-index: -1;
+        }
+
+        header {
+            background: linear-gradient(90deg, rgba(0, 0, 50, 0.8), rgba(75, 0, 130, 0.8));
+            text-align: center;
+            padding: 2rem;
+            border-bottom: 2px solid #00d4ff;
+            box-shadow: 0 0 20px rgba(0, 212, 255, 0.5);
+        }
+
+        header h1 {
+            font-size: 3.5rem;
+            text-transform: uppercase;
+            letter-spacing: 8px; /* Stage Wander ke jaise condensed aur bold look ke liye */
+            text-shadow: 0 0 10px #00d4ff, 0 0 20px #00d4ff;
+            margin: 0;
+            font-weight: 700; /* Extra bold */
+        }
+
+        main {
+            padding: 40px;
+            max-width: 800px;
+            margin: 0 auto;
+            background: rgba(10, 10, 35, 0.7);
+            border-radius: 15px;
+            box-shadow: 0 0 30px rgba(0, 212, 255, 0.3);
+        }
+
+        section h2 {
+            font-size: 2.2rem;
             letter-spacing: 5px;
+            text-shadow: 0 0 5px #ff00ff;
             text-transform: uppercase;
-            text-shadow: 0 0 20px #00ffcc, 0 0 10px #00ffcc;
-            border-bottom: 4px solid #00ffcc;
-            display: inline-block;
-            margin: 20px auto;
+            font-weight: 700;
         }
 
-        .title {
-            font-size: 4em;
-            text-shadow: 0 0 30px #00aaff, 0 0 15px #00aaff;
-            letter-spacing: 4px;
-            text-transform: uppercase;
-            margin-top: 20px;
+        section p {
+            font-size: 1.2rem;
+            line-height: 1.6;
+            letter-spacing: 1px;
         }
 
-        .button {
-            background: linear-gradient(90deg, #ff416c, #ff4b2b);
+        button {
+            padding: 12px 25px;
+            background: linear-gradient(45deg, #ff00ff, #00d4ff);
+            color: #fff;
             border: none;
-            padding: 15px 30px;
-            font-size: 1.8em;
-            font-weight: bold;
-            color: white;
-            cursor: pointer;
-            border-radius: 10px;
-            transition: 0.3s;
+            border-radius: 5px;
+            font-family: 'Exo 2', sans-serif;
+            font-size: 1.1rem;
+            letter-spacing: 3px;
             text-transform: uppercase;
-            letter-spacing: 2px;
-            text-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
+            cursor: pointer;
+            transition: transform 0.2s, box-shadow 0.3s;
+            font-weight: 700;
         }
 
-        .button:hover {
-            box-shadow: 0 0 25px #ff416c, 0 0 15px #ff4b2b;
+        button:hover {
             transform: scale(1.05);
+            box-shadow: 0 0 15px #00d4ff, 0 0 25px #ff00ff;
+        }
+
+        footer {
+            text-align: center;
+            padding: 1rem;
+            background: linear-gradient(90deg, rgba(0, 0, 50, 0.8), rgba(75, 0, 130, 0.8));
+            color: #fff;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            border-top: 2px solid #00d4ff;
+        }
+
+        footer p {
+            margin: 0;
+            font-size: 0.9rem;
+            letter-spacing: 3px;
+            text-transform: uppercase;
+            font-weight: 700;
         }
     </style>
 </head>
 <body>
-    <div class="header">Galaxy Art Store</div>
-    <h1 class="title">Explore the Universe of Designs</h1>
-    <button class="button">Buy Now</button>
+    <header>
+        <h1>Swagat Hai Meri Galaxy Website Pe</h1>
+    </header>
+    
+    <main>
+        <section>
+            <h2>Mera Content</h2>
+            <p>Ye meri pehli website hai. Yahan main jo chahe likh sakta hoon!</p>
+            <button onclick="changeText()">Click Kijiye</button>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2025 Meri Galaxy Website</p>
+    </footer>
+
+    <script>
+        function changeText() {
+            let paragraph = document.querySelector('p');
+            paragraph.textContent = 'Button click kiya gaya! Ab naya text dikh raha hai!';
+        }
+    </script>
 </body>
 </html>
