--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
     </style>
 </head>
 <body>
-    <div class="header">Swagat Hai Meri Galaxy Website Pe</div>
-    <h1 class="title">Explore the Universe of Designs</h1>
+    <div class="header">ARTWORK LORD</div>
+    <h2 class="title">Explore the Universe of Designs</h2>
     <div class="content-box">
-        <h2>Mera Content</h2>
-        <p>Ye meri pehli website hai. Yahan main jo chahe likh sakta hoon!</p>
+        <h4></h4>
+        <p></p>
         <button class="button" onclick="changeText()">Click Kijiye</button>
     </div>
     <div class="footer">© 2025 Meri Galaxy Website | All Rights Reserved</div>
