--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     font-style: normal;
 }
         body {
-            background: radial-gradient(circle at center, #0a0a23 0%, #000000 70%);
-            background-attachment: fixed;
+            background: radial-gradient(circle, #8B0000 20%, #000000 60%, #8B0000 80%);
             color: white;
             font-family: 'Stage Wander', sans-serif;
             text-align: center;
@@ -32,99 +31,57 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('stars.png') repeat;
-            opacity: 0.5;
+            background: url('assets/images/milkyway.png') no-repeat center;
+            background-size: cover;
+            opacity: 0.3;
             z-index: -1;
             animation: twinkle 10s infinite alternate;
         }
 
         @keyframes twinkle {
-            from { opacity: 0.3; }
-            to { opacity: 0.7; }
+            from { opacity: 0.1; }
+            to { opacity: 0.4; }
         }
 
         .header {
-            background: linear-gradient(90deg, rgba(0, 0, 50, 0.8), rgba(75, 0, 130, 0.8));
-            padding: 20px;
-            font-size: 2em;
+            background: radial-gradient(circle, #8B0000, #000000);
+            padding: 10px;
+            font-size: 2.5em;
             letter-spacing: 5px;
             text-transform: uppercase;
-            text-shadow: 0 0 20px #00ffcc, 0 0 10px #00ffcc;
-            border-bottom: 4px solid #00ffcc;
+            text-shadow: 0 0 20px #ff3300, 0 0 10px #ff3300;
+            border-bottom: 4px solid #ff3300;
             display: inline-block;
-            margin: 20px auto;
-            border-radius: 10px;
+            margin: 10px auto;
+            border-radius: 50%;
+            animation: fadeIn 2s ease-in-out;
         }
 
         .title {
-    font-family: 'Stage Wander', sans-serif;
-    font-size: 5em;
-    letter-spacing: 6px;
-    text-transform: uppercase;
-    text-shadow: 0 0 40px #00aaff, 0 0 20px #00aaff;
-}
-
-        .button {
-            background: linear-gradient(90deg, #ff00ff, #00d4ff);
-            border: none;
-            padding: 15px 40px;
-            font-size: 2em;
-            color: white;
-            cursor: pointer;
-            border-radius: 10px;
-            transition: 0.3s;
+            font-size: 3.5em;
+            letter-spacing: 4px;
             text-transform: uppercase;
-            letter-spacing: 3px;
-            text-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
-            animation: glow 1.5s infinite alternate;
+            text-shadow: 0 0 40px #ff4400, 0 0 20px #ff4400;
+            animation: slideIn 1.5s ease-in-out;
         }
 
-        @keyframes glow {
-            from { box-shadow: 0 0 15px #ff00ff, 0 0 10px #00d4ff; }
-            to { box-shadow: 0 0 30px #ff00ff, 0 0 20px #00d4ff; }
+        .sell-button {
+            background: radial-gradient(circle, #8B0000, #000000);
+            box-shadow: 0 0 15px #ff3300, 0 0 25px #ff6600;
         }
 
-        .button:hover {
-            transform: scale(1.1);
-        }
-
-        .content-box {
-            max-width: 800px;
-            margin: 40px auto;
-            padding: 30px;
-            background: rgba(10, 10, 35, 0.8);
-            border-radius: 15px;
-            box-shadow: 0 0 30px rgba(0, 212, 255, 0.5);
-        }
-
-        .footer {
-            margin-top: 50px;
-            padding: 20px;
-            background: linear-gradient(90deg, rgba(0, 0, 50, 0.8), rgba(75, 0, 130, 0.8));
-            color: #ddd;
-            font-size: 1.2em;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            border-top: 2px solid #00ffcc;
+        .sell-button:hover {
+            box-shadow: 0 0 20px #ff3300, 0 0 30px #ff6600;
         }
     </style>
 </head>
 <body>
-    <div class="header">ARTWORK LORD</div>
-    <h2 class="title">Explore the Universe of Designs</h2>
-    <div class="content-box">
-        <h4></h4>
-        <p></p>
-        <button class="button" onclick="changeText()">Click Kijiye</button>
+    <div class="header">ArtworkLord</div>
+    <h1 class="title">Explore the Universe of Designs</h1>
+    <div class="art-grid">
+        <div class="art-item"><img src="assets/images/art1.jpg" alt="Art 1"><div class="art-description">Abstract space painting</div><div class="price">$100</div><button class="sell-button">Sell</button></div>
+        <div class="art-item"><img src="assets/images/art2.jpg" alt="Art 2"><div class="art-description">Nebula fantasy art</div><div class="price">$120</div><button class="sell-button">Sell</button></div>
     </div>
     <div class="footer">© 2025 Meri Galaxy Website | All Rights Reserved</div>
-
-    <script>
-        function changeText() {
-            let paragraph = document.querySelector('.content-box p');
-            paragraph.textContent = 'Button click kiya gaya! Ab naya text dikh raha hai!';
-        }
-    </script>
 </body>
 </html>
