--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     font-style: normal;
 }
         body {
-            background: radial-gradient(circle, #8B0000 20%, #000000 60%, #8B0000 80%);
+            background: radial-gradient(circle, darkred 20%, black 60%);
             color: white;
             font-family: 'Stage Wander', sans-serif;
             text-align: center;
@@ -31,20 +31,13 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('assets/images/milkyway.png') no-repeat center;
-            background-size: cover;
-            opacity: 0.3;
+            background: url('assets/images/stars_background.png') repeat;
+            opacity: 0.7;
             z-index: -1;
-            animation: twinkle 10s infinite alternate;
-        }
-
-        @keyframes twinkle {
-            from { opacity: 0.1; }
-            to { opacity: 0.4; }
         }
 
         .header {
-            background: radial-gradient(circle, #8B0000, #000000);
+            background: black;
             padding: 10px;
             font-size: 2.5em;
             letter-spacing: 5px;
@@ -65,22 +58,58 @@
             animation: slideIn 1.5s ease-in-out;
         }
 
+        .art-grid {
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
+            gap: 20px;
+            padding: 20px;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .art-item {
+            background: rgba(20, 20, 20, 0.9);
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .art-item img {
+            width: 100%;
+            border-radius: 10px;
+        }
+
         .sell-button {
-            background: radial-gradient(circle, #8B0000, #000000);
-            box-shadow: 0 0 15px #ff3300, 0 0 25px #ff6600;
+            background: black;
+            border: 2px solid #ff3300;
+            padding: 10px 15px;
+            font-size: 1.1em;
+            color: white;
+            cursor: pointer;
+            transition: transform 0.3s ease-in-out;
         }
 
         .sell-button:hover {
             box-shadow: 0 0 20px #ff3300, 0 0 30px #ff6600;
+            transform: scale(1.1);
         }
     </style>
+    <script>
+        function redirectToSellPage() {
+            window.location.href = 'sell.html';
+        }
+    </script>
 </head>
 <body>
     <div class="header">ArtworkLord</div>
     <h1 class="title">Explore the Universe of Designs</h1>
     <div class="art-grid">
-        <div class="art-item"><img src="assets/images/art1.jpg" alt="Art 1"><div class="art-description">Abstract space painting</div><div class="price">$100</div><button class="sell-button">Sell</button></div>
-        <div class="art-item"><img src="assets/images/art2.jpg" alt="Art 2"><div class="art-description">Nebula fantasy art</div><div class="price">$120</div><button class="sell-button">Sell</button></div>
+        <div class="art-item"><img src="assets/images/art1.jpg" alt="Art 1"><div class="art-description">Abstract space painting</div><div class="price">$100</div><button class="sell-button" onclick="redirectToSellPage()">Sell</button></div>
+        <div class="art-item"><img src="assets/images/art2.jpg" alt="Art 2"><div class="art-description">Nebula fantasy art</div><div class="price">$120</div><button class="sell-button" onclick="redirectToSellPage()">Sell</button></div>
+        <div class="art-item"><img src="assets/images/art3.jpg" alt="Art 3"><div class="art-description">Galactic swirl</div><div class="price">$130</div><button class="sell-button" onclick="redirectToSellPage()">Sell</button></div>
+        <div class="art-item"><img src="assets/images/art4.jpg" alt="Art 4"><div class="art-description">Eclipse dream</div><div class="price">$140</div><button class="sell-button" onclick="redirectToSellPage()">Sell</button></div>
+        <div class="art-item"><img src="assets/images/art5.jpg" alt="Art 5"><div class="art-description">Cosmic vision</div><div class="price">$150</div><button class="sell-button" onclick="redirectToSellPage()">Sell</button></div>
     </div>
     <div class="footer">© 2025 Meri Galaxy Website | All Rights Reserved</div>
 </body>
