--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Galaxy Art Store</title>
+  <title>Artwork Lord</title>
   <style>
     body {
-      font-family: 'Arial', sans-serif;
+      font-family: 'lobster', sans-serif;
       margin: 0;
       padding: 0;
       background: url('your-galaxy-image.jpg') no-repeat center center fixed;
@@ -27,7 +27,7 @@
 
     .button {
       padding: 10px 20px;
-      background-color: #3498db;
+      background-color: #DFFF00;
       color: white;
       border: none;
       cursor: pointer;
@@ -68,7 +68,7 @@
 <body>
 
   <header>
-    <h1>Galaxy Art Store</h1>
+    <h1>Artwork Lord</h1>
     <button class="button" onclick="openPopup()">Buy</button>
   </header>
 
